k8s_manifests/ingresses/basic-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: go-ws-svc
    servicePort: 80
