k8s_manifests/ingresses/fanout-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: go-ws-svc
          servicePort: 80
      - path: /hello/*
        backend:
          serviceName: hello-svc
          servicePort: 80
