k8s_manifests/ingresses/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
  namespace: go-ws
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: go-ws-svc
              servicePort: 80
